# Data-cleaning-assignment-week-2

./: hospital_data.csv  main.py  pyproject.toml  test.ipynb
