[project]
name = "data-cleaning-assigmnet-week-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]
